--- a/application/src/kv/shoppinglist.kv
+++ b/application/src/kv/shoppinglist.kv
@@ -34,11 +34,12 @@
 		
 	Button:
 		text: "Add Item"
+		id : addItem
 		font_size: 65
 		color: 0, 0, 255, 1
 		size_hint: (.98, 0.09)
 		pos_hint:{'x': .01, 'top': .105}
-		#on_press: root.manager.current = ' '
+		on_press: root.OpenAdd()
 
 	ScrollView:
 		do_scroll_x: False
