GUI for trends is completed

--- a/application/src/kv/recipes.kv
+++ b/application/src/kv/recipes.kv
@@ -249,14 +249,11 @@
     FloatLayout:
         Image:
             source: "graphics/generalbackground.png"
+
 	GridLayout:
 		cols:1
-        pos_hint:{'x': 0.01, 'top': 1.25}
-		size_hint: (.98,1)
-		spacing: [10,10]
-
-		GridLayout:
-			cols:1
+		padding: [30]
+		spacing: [5, 5]
 
         Button:
             text: "Personal Recipes"
