Setting up Sharing backend current data sent to server and a little change to frontend

--- a/application/src/kv/itemshare.kv
+++ b/application/src/kv/itemshare.kv
@@ -1,32 +1,14 @@
 <ItemShare>:
 
-	itemName:itemName                #for python code : for kivy code
-	shareWith:shareWith        		 #for python code : for kivy code
+	#itemName:itemName                #for python code : for kivy code
+	#shareWith:shareWith        		 #for python code : for kivy code
+
 
 	GridLayout:
 		cols:1
-		size: root.width, root.height
-		GridLayout:
-			cols:2
-			
-			Label:
-				text: "Item Name: "
-					
-			TextInput:
-				id: itemName
-				multiline: False
-					
-			Label:
-				text: "Share With: "
-					
-			TextInput:
-				id: shareWith
-				multiline: False
-		
-		Button:
-            text: 'Send Notification'
-            on_press: root.manager.current = 'homescreen'
-			#on_press: root.shareItems()
+		rows:1
+		row_force_default: True
+		row_default_height: 40
 		
 		Button:
             text: 'Back To Home'
