fixing issues with recommended recipes

--- a/application/src/kv/recipes.kv
+++ b/application/src/kv/recipes.kv
@@ -203,36 +203,36 @@
             height: self.minimum_height
             row_default_height: 45
 
-    GridLayout:
-        cols:1
-        pos_hint:{'x': 0.01, 'top': 1.03}
-        Label:
-            text:"Instructions"
-            font_size: 55
-            size_hint:(0.98,0.1)
+    #GridLayout:
+    #    cols:1
+    #    pos_hint:{'x': 0.01, 'top': 1.03}
+    #    Label:
+    #        text:"Instructions"
+    #        font_size: 55
+    #        size_hint:(0.98,0.1)
 
-    ## This does not work and breaks the other scroll
-    #ScrollView:
-        #do_scroll_x: False
-        #do_scroll_y: True
-        #pos_hint:{'x': 0.01, 'top': 0.86}
-        #size_hint: (.98,.3)
+    #This does not work and breaks the other scroll
+    ScrollView:
+        do_scroll_x: False
+        do_scroll_y: True
+        pos_hint:{'x': 0.01, 'top': 0.43}
+        size_hint: (.98,.3)
 
-        #GridLayout:
-            #cols:1
-            #id: instructions
-            #size_hint_y: None
-            #height: self.minimum_height
-            #row_default_height: 45
+        GridLayout:
+            cols:1
+            id: instructions
+            size_hint_y: None
+            height: self.minimum_height
+            row_default_height: 45
 
     ## Haven't been able to get instructions to display properly yet
-    GridLayout:
-        cols:1
-        pos_hint:{'x':0.01, 'top': 1.05}
-        Label:
-            id: instructions
-            text_size: self.size
-            size_hint:(0.98,0.5)
+    #GridLayout:
+    #    cols:1
+    #    pos_hint:{'x':0.01, 'top': 1.05}
+    #    Label:
+    #        id: instructions
+    #        text_size: self.size
+    #        size_hint:(0.98,0.5)
     GridLayout:
         cols:2
         pos_hint:{'x': 0.01, 'top': .53}
