adding items to shopping list functional

--- a/application/src/kv/shoppinglist.kv
+++ b/application/src/kv/shoppinglist.kv
@@ -38,7 +38,7 @@
 		font_size: 65
 		color: 0, 0, 255, 1
 		size_hint: (.98, 0.09)
-		pos_hint:{'x': .01, 'top': .105}
+		#pos_hint:{'x': .01, 'top': .105}
 		on_press: root.OpenAdd()
 
 	ScrollView:
