--- a/application/src/kv/userprofile.kv
+++ b/application/src/kv/userprofile.kv
@@ -34,6 +34,7 @@
 	    size_hint: (0.2, 0.05)
 	    pos_hint:{'x': 0.01, 'top': .99}
 	    on_press: root.manager.current = 'profile'
+	    on_press: root.ids.newLoc.text = ''
 	    Image:
 		    source:"graphics/back.png"
 		    center_x: self.parent.center_x
