--- a/application/src/kv/inventory.kv
+++ b/application/src/kv/inventory.kv
@@ -9,6 +9,7 @@
 		size_hint: (0.2, 0.07)
 		pos_hint:{'x': 0.01, 'top': .99}
 		on_press: root.manager.current =  'homescreen'
+		on_press: root.ids.search.text = ""
 		Image:
 			source:"graphics/back.png"
 			center_x: self.parent.center_x
@@ -68,6 +69,7 @@
 		size_hint: (0.2, 0.05)
 		pos_hint:{'x': 0.01, 'top': .99}
 		on_press: root.manager.current = 'inventory'
+		on_press: root.clearFieldsAdd()
 		Image:
 			source:"graphics/back.png"
 			center_x: self.parent.center_x
@@ -174,6 +176,7 @@
 		size_hint: (0.2, 0.05)
 		pos_hint:{'x': 0.01, 'top': .99}
 		on_press: root.manager.current =  'inventory'
+		on_press: root.clearFieldsDel()
 		Image:
 			source:"graphics/back.png"
 			center_x: self.parent.center_x
