Created feedback UI

--- a/application/src/kv/main.kv
+++ b/application/src/kv/main.kv
@@ -40,6 +40,11 @@
             text: 'Share My Items'
             font_size: 65
             on_press: root.manager.current = 'shareitems'
+            
+        Button:
+        	text: 'Provide Feedback'
+        	font_size: 65
+        	on_press: root.manager.current = 'feedback'
 			
 		Button:
             text: 'Logout'
