--- a/application/src/kv/feedback.kv
+++ b/application/src/kv/feedback.kv
@@ -6,7 +6,7 @@
 	GridLayout:
 		cols:1
 		size_hint: 1,1
-		padding: [20]
+		#padding: [20]
 		spacing: [10,20]
 
 		GridLayout:
@@ -14,7 +14,7 @@
 		
 		Label:
 			text: "Please Provide Some Feedback"
-			font_size: 50
+			font_size: 60
 			
 		Label:
 			text: "Rating:"
