--- a/application/src/kv/shoppinglist.kv
+++ b/application/src/kv/shoppinglist.kv
@@ -3,12 +3,11 @@
         Image:
             source: "graphics/generalbackground.png"
 	Button:
-		text: ""
-		font_size: 15
-		color: 1,0,0,1
-		size_hint: (0.2, 0.05)
-		pos_hint:{'x': 0.01, 'top': .90}
+		text: " "
+		size_hint: (0.2, 0.07)
+		pos_hint:{'x': 0.01, 'top': .99}
 		on_press: root.manager.current =  'homescreen'
+		on_press: root.ids.search.text = ""
 		Image:
 			source:"graphics/back.png"
 			center_x: self.parent.center_x
@@ -16,16 +15,15 @@
 		
 	TextInput:
 		id: search
-		size_hint: (0.58, 0.05)
+		size_hint: (0.58, 0.07)
 		halign: 'center'
-		font_size: 15
-		pos_hint:{'x': 0.21, 'top': .90}
+		font_size: 75
+		pos_hint:{'x': 0.21, 'top': .99}
 	
 	Button:
-		text: ""
-		font_size: 15
-		size_hint: (0.2, 0.05)
-		pos_hint:{'x': .79, 'top': .90}
+		text: " "
+		size_hint: (0.2, 0.07)
+		pos_hint:{'x': .79, 'top': .99}
 		on_press: root.SearchItem()
 		Image:
 			source:"graphics/search.png"
@@ -34,22 +32,20 @@
 		
 	Button:
 		text: "Add Item"
-		id : addItem
 		font_size: 65
-		color: 0, 0, 255, 1
 		size_hint: (.98, 0.09)
-		#pos_hint:{'x': .01, 'top': .105}
+		pos_hint:{'x': .01, 'top': .105}
 		on_press: root.OpenAdd()
 
 	ScrollView:
 		do_scroll_x: False
 		do_scroll_y: True
-		size_hint: (.98, 0.815)
-		pos_hint:{'x': 0.01, 'top': 0.84}
+		size_hint: (.98,.815)
+		pos_hint:{'x': 0.01, 'top': 0.92}
 
 		GridLayout:
 			id: inventoryID
 			cols: 1
 			size_hint_y: None
             height: self.minimum_height
-            row_default_height: 70
+            row_default_height: 175
